src/tests/select/snapshots/ciboulette2pg__tests__select__sorting_select_query.snap
---
source: src/tests/select/mod.rs
expression: "sqlformat::format(query.as_str(), &sqlformat::QueryParams::None,\n                  sqlformat::FormatOptions::default())"

---
WITH "cte_peoples_data_0" AS (
  SELECT
    "public"."peoples"."id" :: TEXT AS "id",
    "public"."peoples"."id" AS "main_id",
    NULL :: TEXT AS "related_id",
    NULL :: TEXT AS "related_type",
    $1 :: TEXT AS "type",
    JSON_BUILD_OBJECT(
      $2,
      "public"."peoples"."age",
      $3,
      "public"."peoples"."first-name",
      $4,
      "public"."peoples"."gender",
      $5,
      "public"."peoples"."last-name",
      $6,
      "public"."peoples"."twitter"
    ) AS "data",
    "public"."peoples"."favorite_color" AS "rel_favorite_color",
    "public"."peoples"."first-name" AS "sort_first-name"
  FROM
    "public"."peoples"
),
"cte_final_main_data" AS (
  SELECT
    DISTINCT ON ("cte_peoples_data_0"."main_id") "cte_peoples_data_0".*,
    "cte_peoples_data_0"."sort_first-name" AS "sort__first-name"
  FROM
    "cte_peoples_data_0"
  ORDER BY
    "cte_peoples_data_0"."main_id"
) (
  SELECT
    "cte_final_main_data"."id",
    "cte_final_main_data"."type",
    "cte_final_main_data"."data",
    "cte_final_main_data"."related_type",
    "cte_final_main_data"."related_id"
  FROM
    "cte_final_main_data"
  ORDER BY
    "cte_final_main_data"."sort__first-name" ASC
);
